--- a/src/Memory.jsx/memory.css
+++ b/src/Memory.jsx/memory.css
@@ -5,7 +5,7 @@
   justify-content: center;
   height: 100vh;
   width: 100%;
-  background-color: darksalmon;
+  background-color: rgb(65, 63, 68);
 }
 
   .card-table{
@@ -15,7 +15,7 @@
      grid-template-columns: repeat(5, auto);
      gap: 10px;
      margin-top: 200px;
-     background-color: burlywood;
+     background-color: rgb(119, 108, 93);
      height: 900px;
      width: 1600px;
 
@@ -25,5 +25,5 @@
    .score{
      display: flex;
      justify-content: space-between;
-     font-size: 1.5em;
+     font-size: 2.5em;
    }
